@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Controller_ORCJAVA-260</name>
+	<name>Controller_2_0_1_EmonCMS</name>
 	<comment></comment>
 	<projects>
 	</projects>
