@@ -7,6 +7,7 @@ New Features:
   - Mi Casa Verde Vera Integration (Marcus Redeker, ORCJAVA-330, ORCJAVA-331)
   - Round robind database (RRD) integration for storing sensor
     data (Marcus Redeker, ORCJAVA-343)
+  - EmonCMS integration for storing sensor data (Marcus Redeker, ORCJAVA-357)
   - WebConsole upgraded to version 2.1.1, fixes issues with stuck
     loading screen (Richard Turner, ORCJAVA-345)
   - Added DSC-IT 100 Security System integration - IP to serial (Greg Rapp)
